// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpenseSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totaling 
    $2.35
    .
  </h1>
</div>
`;

exports[`should correctly render ExpenseSummary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
     
    expenses
     totaling 
    $23,597,659.87
    .
  </h1>
</div>
`;
